<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="MAIN" Id="{4c6ab2c4-5e73-43da-80f3-e38131f4b388}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR  
	Sensor_Anterior : BOOL := FALSE;
	Flanco_Subida : BOOL := FALSE;
	Estado: INT := 0; // 0: Espera | 1: Descargando | 2: Post-descarga
	
	
	// Variables internas
	Sistema_Activo : BOOL;
	
	Timer_Stop           : TON;
	Esperando_Timer      : BOOL := FALSE;
	
	Nivel_Bajo           : BOOL;
	Nivel_Alto           : BOOL;
	Nivel_OK             : BOOL;
	// Temporizador para la descarga
	Timer_Descarga       : TON;
	Descargando          : BOOL := FALSE;
	Timer_Llenado: TON;
	InicioLLenado: BOOL := TRUE;
	VienesDeDescarga: BOOL;
	primeraVez: BOOL;
	numDescargas: INT;
	luzVerde: BOOL;
	luzAmarilla: BOOL;
	luzRoja: BOOL;
	tiempoLLenado: TIME;
	tiempoTranscurrrido: TIME;
	parado: BOOL; // variable que india que la secucnia paso por el etado de parado (se pulso stop)
	tiempoRestante: DINT;
	emergencia: BOOL;
	luzBotonStart: BOOL;
	luzBotonStop: BOOL;
	luzBotonReset: BOOL;
	tiempoCargaBarril: TIME;
	cargandoTanque: BOOL;
	modoManual: BOOL;
	modoAuto: BOOL;
	salidaProducto: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//------------------------------------------ Logica Botones ------------------------------------------

// Luces de los botones del cuadro
// Solo se mantienen encendidas mientras estan pulsados
luzBotonStart := FALSE;
luzBotonStop := FALSE;
luzBotonReset := FALSE;



// Enclavamiento del boton de start
IF GVLvars.Start_Button  AND emergencia = FALSE THEN
    Sistema_Activo := TRUE;
	primeraVez := TRUE;
	luzVerde := TRUE;
	luzAmarilla := FALSE;
	luzRoja := FALSE;
	parado := FALSE;
	emergencia := FALSE;
	luzBotonStart := TRUE;
END_IF

// Boton Stop -> se para 
IF NOT GVLvars.StopButton AND emergencia = FALSE  THEN
	Sistema_Activo := FALSE;
	parado := TRUE;
	luzVerde := FALSE;
	luzAmarilla := TRUE;
	luzRoja := FALSE;
	//tiempoTranscurrrido := Timer_Llenado.ET;
	InicioLLenado := FALSE;
	emergencia := FALSE;
	luzBotonStop := TRUE;
END_IF
 
// Si se acciona la seta de emergencia se para todo
IF GVLvars.seta = false  THEN
	Sistema_Activo := FALSE;
	parado := FALSE;
	luzVerde := FALSE;
	luzAmarilla := FALSE;
	luzRoja := TRUE;
	//tiempoTranscurrrido := Timer_Llenado.ET;
	//InicioLLenado := FALSE;
	emergencia := TRUE;
END_IF

// Si la seta no esta armada pero lo estuvo previamente 
// se debe pulsar el boton de reset para reanudar la actividad 
IF  GVLvars.seta AND emergencia THEN
	IF GVLvars.resetBoton THEN
		Sistema_Activo := TRUE;
		//primeraVez := TRUE;
		luzVerde := TRUE;
		luzAmarilla := FALSE;
		luzRoja := FALSE;
		parado := FALSE;
		emergencia := FALSE;
		luzBotonReset := TRUE;
	END_IF
END_IF

IF GVLvars.modoManual THEN
	modoManual := TRUE;
	modoAuto := FALSE;
END_IF

IF GVLvars.modoAuto THEN
	modoManual := FALSE;
	modoAuto := TRUE;
END_IF

//------------------------------------------ Calculo tiempos ------------------------------------------

// se pretende que el tanuqe este siempre ente un 20-80%
// si el tanuqe esta vacio se necesitan  39s para el 80% 
// si el tanque esta al 20% se necesitan 31s para el 80%
// si el se paro en algun punto se calcula el tiempo rstante
IF primeraVez THEN
	tiempoLLenado := T#39S;
ELSE 
	tiempoLLenado := T#32S;
END_IF

IF Sistema_Activo THEN
	// Control inicial llenado tanque
	Timer_Llenado(IN := InicioLLenado, PT := tiempoLLenado);
	IF NOT Timer_Llenado.Q AND InicioLLenado THEN
		GVLvars.Fill_Valve := TRUE;           // Abrir valvula llenado
		cargandoTanque := TRUE;
	ELSE
		GVLvars.Fill_Valve := FALSE;          // Cerrar valvula llenado
		// Solo dejar de iniciar llenado después de completar timer
		InicioLLenado := FALSE;
		cargandoTanque := FALSE;
	END_IF
END_IF

//------------------------------------------ Logica Tanque y Cintas ------------------------------------------

// Si el sistema esta activo
IF Sistema_Activo  AND InicioLLenado=FALSE  AND emergencia = FALSE THEN
	//La oprimera vez que se inica el programa se arrancan las cintas
	IF primeraVez THEN
		GVLvars.Cinta_Entrada := TRUE;
		GVLvars.Cinta_Tanque  := TRUE;
		GVLvars.Cinta_Salida  := TRUE;
		primeraVez := FALSE;
	END_IF



	Flanco_Subida := (NOT Sensor_Anterior) AND GVLvars.Sensor_Tanque_Salida;
	Sensor_Anterior := GVLvars.Sensor_Tanque_Salida;


    // Máquina de estados
    CASE Estado OF

        // Estado 0: Esperando objeto en la boca del tanque
        0:
			salidaProducto := FALSE;
			GVLvars.Cinta_Entrada := TRUE;
			GVLvars.Cinta_Tanque  := TRUE;
			GVLvars.Cinta_Salida  := TRUE;
			GVLvars.Discharge_Valve := FALSE;
			Timer_Descarga(IN := FALSE);
//			IF modoManual THEN
//				Sistema_Activo := FALSE;
//			END_IF
			IF Flanco_Subida  THEN
				Estado := 1;
			END_IF
		
		

        //  Estado 1: Descargando (2 segundos)
        1:
			GVLvars.Cinta_Entrada := FALSE;
			GVLvars.Cinta_Tanque  := FALSE;
			GVLvars.Cinta_Salida  := FALSE;
			GVLvars.Discharge_Valve := TRUE;
			
			tiempoCargaBarril := CalculoTiempoLLenado(Volume_L :=709, Flow_Lps :=0.3543  );

			Timer_Descarga(IN := TRUE, PT := T#2s);

			IF Timer_Descarga.Q THEN
				Timer_Descarga(IN := FALSE); // Detener timer
				numDescargas := numDescargas + 1;
				Estado := 2;
			END_IF

			
			
        // Estado 2: Post-descarga - reactivar cintas
        2:
		
			IF numDescargas < 16 THEN
				GVLvars.Discharge_Valve := FALSE;
				GVLvars.Cinta_Entrada := TRUE;
				GVLvars.Cinta_Tanque  := TRUE;
				GVLvars.Cinta_Salida  := TRUE;

				Estado := 3; // Volver a esperar nuevo objeto
			ELSE
				GVLvars.Discharge_Valve := FALSE;
				GVLvars.Cinta_Entrada := FALSE;
				GVLvars.Cinta_Tanque  := FALSE;
				GVLvars.Cinta_Salida  := FALSE;
				InicioLLenado := TRUE;
				numDescargas := 0;
				Estado := 3; 
			END_IF
//			IF modoManual THEN
//				Sistema_Activo := FALSE;
//			END_IF
			
		
		3:
//			GVLvars.Cinta_Entrada := TRUE;
//			GVLvars.Cinta_Tanque  := TRUE;
//			GVLvars.Cinta_Salida  := TRUE;
//			GVLvars.Discharge_Valve := FALSE;
			
			IF GVLvars.sensorSalida THEN
				GVLvars.Cinta_Entrada := FALSE;
				GVLvars.Cinta_Tanque  := FALSE;
				GVLvars.Cinta_Salida  := FALSE;	
				Estado := 4;
			END_IF
		
		4:
		
			IF modoManual THEN
					Sistema_Activo := FALSE;
			END_IF  	
			
			Estado := 0; // Volver a esperar nuevo objeto
		
            
    END_CASE

  

ELSE
    // Sistema desactivado
    GVLvars.Cinta_Entrada := FALSE;
    GVLvars.Cinta_Tanque  := FALSE;
    GVLvars.Cinta_Salida  := FALSE;
    Timer_Descarga(IN := FALSE);
    Descargando := FALSE;
END_IF



// ------------------------- Actualizar salidas -------------------------

GVLvars.luzAmarilla := luzAmarilla;
GVLvars.luzRoja := luzRoja;
GVLvars.luzVerde := luzVerde;
GVLvars.luzBotonReset := luzBotonReset;
GVLvars.luzBotonStart := luzBotonStart;
GVLvars.luzBotonStop := luzBotonStop;



]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="1787" Count="0" />
      <LineId Id="1786" Count="0" />
      <LineId Id="1788" Count="0" />
      <LineId Id="1671" Count="1" />
      <LineId Id="1674" Count="1" />
      <LineId Id="1673" Count="0" />
      <LineId Id="1676" Count="0" />
      <LineId Id="1669" Count="1" />
      <LineId Id="1314" Count="3" />
      <LineId Id="1542" Count="1" />
      <LineId Id="1545" Count="0" />
      <LineId Id="1591" Count="0" />
      <LineId Id="1645" Count="0" />
      <LineId Id="1660" Count="0" />
      <LineId Id="1318" Count="0" />
      <LineId Id="1562" Count="0" />
      <LineId Id="1538" Count="0" />
      <LineId Id="1537" Count="0" />
      <LineId Id="1539" Count="0" />
      <LineId Id="1541" Count="0" />
      <LineId Id="1549" Count="1" />
      <LineId Id="1548" Count="0" />
      <LineId Id="1587" Count="1" />
      <LineId Id="1644" Count="0" />
      <LineId Id="1677" Count="0" />
      <LineId Id="1540" Count="0" />
      <LineId Id="1563" Count="0" />
      <LineId Id="1635" Count="0" />
      <LineId Id="1631" Count="0" />
      <LineId Id="1636" Count="5" />
      <LineId Id="1633" Count="0" />
      <LineId Id="1642" Count="0" />
      <LineId Id="1634" Count="0" />
      <LineId Id="1650" Count="0" />
      <LineId Id="1632" Count="0" />
      <LineId Id="1651" Count="0" />
      <LineId Id="1646" Count="0" />
      <LineId Id="1648" Count="0" />
      <LineId Id="1654" Count="5" />
      <LineId Id="1652" Count="0" />
      <LineId Id="1679" Count="0" />
      <LineId Id="1653" Count="0" />
      <LineId Id="1649" Count="0" />
      <LineId Id="1795" Count="2" />
      <LineId Id="1799" Count="0" />
      <LineId Id="1798" Count="0" />
      <LineId Id="1792" Count="0" />
      <LineId Id="1791" Count="0" />
      <LineId Id="1793" Count="0" />
      <LineId Id="1802" Count="0" />
      <LineId Id="1794" Count="0" />
      <LineId Id="1647" Count="0" />
      <LineId Id="1789" Count="0" />
      <LineId Id="1630" Count="0" />
      <LineId Id="1564" Count="0" />
      <LineId Id="1569" Count="1" />
      <LineId Id="1597" Count="0" />
      <LineId Id="1565" Count="0" />
      <LineId Id="1567" Count="0" />
      <LineId Id="1593" Count="0" />
      <LineId Id="1573" Count="0" />
      <LineId Id="1568" Count="0" />
      <LineId Id="1566" Count="0" />
      <LineId Id="1319" Count="0" />
      <LineId Id="1576" Count="3" />
      <LineId Id="1746" Count="0" />
      <LineId Id="1580" Count="3" />
      <LineId Id="1747" Count="0" />
      <LineId Id="1574" Count="1" />
      <LineId Id="1343" Count="0" />
      <LineId Id="1790" Count="0" />
      <LineId Id="1344" Count="9" />
      <LineId Id="1833" Count="0" />
      <LineId Id="1510" Count="1" />
      <LineId Id="1508" Count="1" />
      <LineId Id="1413" Count="6" />
      <LineId Id="1700" Count="0" />
      <LineId Id="1703" Count="5" />
      <LineId Id="1834" Count="1" />
      <LineId Id="1709" Count="1" />
      <LineId Id="1701" Count="1" />
      <LineId Id="1428" Count="3" />
      <LineId Id="1685" Count="13" />
      <LineId Id="1683" Count="1" />
      <LineId Id="1443" Count="2" />
      <LineId Id="1712" Count="0" />
      <LineId Id="1730" Count="14" />
      <LineId Id="1713" Count="0" />
      <LineId Id="1837" Count="1" />
      <LineId Id="1836" Count="0" />
      <LineId Id="1805" Count="0" />
      <LineId Id="1714" Count="0" />
      <LineId Id="1481" Count="0" />
      <LineId Id="1807" Count="2" />
      <LineId Id="1806" Count="0" />
      <LineId Id="1810" Count="0" />
      <LineId Id="1823" Count="0" />
      <LineId Id="1813" Count="1" />
      <LineId Id="1811" Count="0" />
      <LineId Id="1884" Count="0" />
      <LineId Id="1812" Count="0" />
      <LineId Id="1824" Count="0" />
      <LineId Id="1885" Count="0" />
      <LineId Id="1887" Count="4" />
      <LineId Id="1886" Count="0" />
      <LineId Id="1496" Count="0" />
      <LineId Id="1451" Count="0" />
      <LineId Id="1412" Count="0" />
      <LineId Id="1356" Count="0" />
      <LineId Id="1400" Count="6" />
      <LineId Id="1409" Count="2" />
      <LineId Id="1551" Count="3" />
      <LineId Id="1559" Count="0" />
      <LineId Id="1558" Count="0" />
      <LineId Id="1560" Count="1" />
      <LineId Id="1661" Count="0" />
      <LineId Id="1680" Count="1" />
      <LineId Id="1555" Count="2" />
      <LineId Id="104" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>